# Morphology-Informed-HGNN

./: .gitignore  .gitmodules  LICENSE.md  README.md  csvParser.py  dataset.py  dataset_code.py  datasets.py  gnn.py  pyproject.toml  pytorchGraph.py  requirements.txt  unit_testing.py  urdfParser.py
.github/workflows/: python_test.yml
datasets/: .gitignore  README.txt
docs/: index.html
docs/static/css/: index.css
environment_files/: README.md  conda_env.yml  requirements.txt
paper/: README.md  contact_experiment.csv  contact_experiment_ablation.csv  contact_experiment_sample_eff.csv  create_regression_plot_video.py  create_regression_plots.py  regression_results_dynamics.csv  regression_results_hgnns.csv  regression_results_mlps.csv
paper/website_images/: README.md
research/: GRF_cal.py  GRF_cal_2.py  GRF_cal_2_daniel.py  GRF_cal_daniel.py  animations.py  devel.py  evaluate_dynamics_model_regression.py  evaluator.py  evaluator_classification.py  evaluator_regression.py  evaluator_regression_dynamics.py  forward_kinematic_testing.py  pkl_tester.py  sweep.yaml  sweeper.py  sweeper_classification.py  sweeper_regression.py  train.py  train_classification.py  train_classification_sample_eff.py  train_regression.py  urdfTest.py  visualize_der.py
research/sweeps/: sweep1.yaml  sweep2.yaml  sweep_class_hs_ln_abalation.yaml
src/grfgnn/: __init__.py  customMetrics.py  datasets.py  datasets_deprecated.py  gnn.py  gnnLightning.py  graphParser.py  urdfParser.py  visualization.py
src/grfgnn/datasets_py/: LinTzuYaunDataset.py  (+4 more)
src/mi_hgnn/: __init__.py  graphParser.py  visualization.py
tests/: testDatasets.py  testGnnLightning.py  testGraphParser.py  testUrdfParser.py  test_norm_regression_generator.mlx
tests/matlab_regression_test_generators/: test_norm_regression_generator.mlx  test_transformation_regression_generator.mlx
urdf_files/: README.md
urdf_files/A1/: a1.urdf
urdf_files/A1-Quad/: a1.urdf  a1_pruned.urdf
urdf_files/Go1/: go1.urdf
urdf_files/Go2/: go2.urdf
urdf_files/Go2-Quad/: CMakeLists.txt  go2.urdf  package.xml
urdf_files/HyQ/: hyq.urdf
urdf_files/MiniCheetah/: miniCheetah.urdf
(+24 files in other folders)
