[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grfgnn"
version = "0.1.0"
authors = [
  { name="Daniel Butterfield", email="dbutterfield3@gatech.edu" },
  { name="Jackson Cheng", email="ncheng49@gatech.edu" },
]
description = "A graph neural network implementation that learns to estimate contact state on a robotic quadruped."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/lunarlab-gatech/state-estimation-gnn"
Issues = "https://github.com/lunarlab-gatech/state-estimation-gnn/issues"